2013-10-12  Andrey Borzenkov <arvidjaar@gmail.com>

	Fix inconsistent use of GRUB_CRYPTODISK_ENABLE and
	GRUB_ENABLE_CRYPTODISK.

	* util/grub-install.in: Rename all GRUB_CRYPTODISK_ENABLE to
	GRUB_ENABLE_CRYPTODISK.
	* util/grub-mkconfig_lib.in: Likewise.

2013-10-12  Christian Cier-Zniewski <c.cier@gmx.de>

	* docs/grub.texi (Vendor power-on keys): Add Dell Latitude E4300.

2013-10-12  Melki Christian  <Christian.melki@saabgroup.com>

	* grub-core/term/at_keyboard.c [DEBUG_AT_KEYBOARD]: Fix compilation
	error when enabling debug.

2013-10-12  Ilya Bakulin <Ilya_Bakulin@genua.de>

	* configure.ac: Use -melf_*_obsd on openbsd.

2013-10-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/arm/dl_helper.c: Use more proper %p for pointer.

2013-10-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h: Use gnu_printf rather than printf as format
	template since our functions are independent of libc.

2013-10-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Move copying of partition table as
	futher up as possible to avoid possible overwrite by floppy routines.

2013-10-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/fat.c: Fix handling of exfat contiguous files.

2013-10-10  Vladimir Testov  <vladimir.testov@rosalab.ru>

	* grub-core/gfxmenu/gui_list.c: New option `scrollbar_thumb_overlay`.
	* docs/grub.texi: Likewise.

2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (make_device_name): Remove dos_part and bsd_part as
	it's mostly unused. Move vestiges to the callers.

2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c: Remove temporary buffers for hex
	version of salt and hash. Use grub_snprintf rather than snprintf.

2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Fix problem with braces.

2013-10-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.extra-dist: Fix extra-dist list.